RESOLVED FIXED158868
Fix compilation error when we enable DUMP_NODE_STATISTICS
https://bugs.webkit.org/show_bug.cgi?id=158868
Summary Fix compilation error when we enable DUMP_NODE_STATISTICS
Hyungwook Lee
Reported 2016-06-17 00:37:24 PDT
There are some complication errors when we DUMP_NODE_STATISTICS define in Node.h
Attachments
Patch (1.69 KB, patch)
2016-06-17 01:22 PDT, Hyungwook Lee
no flags
Archive of layout-test-results from ews103 for mac-yosemite (994.87 KB, application/zip)
2016-06-17 01:52 PDT, Build Bot
no flags
Hyungwook Lee
Comment 1 2016-06-17 01:22:18 PDT
Build Bot
Comment 2 2016-06-17 01:52:26 PDT
Comment on attachment 281548 [details] Patch Attachment 281548 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1517006 New failing tests: security/contentSecurityPolicy/video-with-file-url-allowed-by-media-src-star.html
Build Bot
Comment 3 2016-06-17 01:52:29 PDT
Created attachment 281551 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 4 2016-06-17 12:10:30 PDT
Comment on attachment 281548 [details] Patch Clearing flags on attachment: 281548 Committed r202172: <http://trac.webkit.org/changeset/202172>
WebKit Commit Bot
Comment 5 2016-06-17 12:10:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.