Fix compilation errors when we enable DUMP_NODE_STATISTICS in Node.h https://bugs.webkit.org/show_bug.cgi?id=158868

Reviewed by Alex Christensen.

Fix compilation errors in Node.cpp when we enable DUMP_NODE_STATISTICS

* dom/Node.cpp:
(WebCore::Node::dumpStatistics):


Canonical link: https://commits.webkit.org/176949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202172 268f45cc-cd09-0410-ab3c-d52691b4dbfc